@@ -1,3 +1,5 @@
+* Overwrite Array.prototype methods assigned by Enumerable with optimized equivalents. [jddalton]
+
 * Optimize by using "_each" instead of "each" where applicable. Closes #9092. [jddalton, sylvainzimmer]
 
 * Preserve inline display style when using Element#show and Element#hide. Closes #3868. [anonymous, Tobie Langel]
